simple-py-ms-bg/manifests/ingress.yml
# Nginx Ingress (route to Istio Gateway)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: spms-bg
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "*""
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: gateway  
            port: 
              number: 80
            namespace: istio-system
